--- a/smart_dam/src/dam_dashboard/index.html
+++ b/smart_dam/src/dam_dashboard/index.html
@@ -18,6 +18,9 @@
     <!-- chart js library -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
 
+    <!-- socks.js for web-sockets with vert x -->
+    <script src="https://unpkg.io/sockjs-client@1.5.0/dist/sockjs.min.js"></script>
+    
     <title>Dam Dashboard</title>
 </head>
 
