removed false import and added col-md-6 for info

--- a/smart_dam/src/dam_dashboard/index.html
+++ b/smart_dam/src/dam_dashboard/index.html
@@ -9,9 +9,6 @@
     <!-- Bootsrap CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-    <!-- style.css -->
-    <link rel="stylesheet" href="style.css" />
-
     <!-- jQuery import -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
@@ -31,7 +28,7 @@
 
     <main class="row">
 
-        <div id="data-section" class="text-center col-12">
+        <div id="data-section" class="text-center col-12 col-md-6">
                             <div id="state" class="data py-3 lvl-0">
                     <p>Dam Status</p>
                     <p class="value fw-bold fs-3"></p>
