added periodic Timestamp request and loop to process data also made constant upercase

--- a/smart_dam/src/dam_dashboard/index.html
+++ b/smart_dam/src/dam_dashboard/index.html
@@ -15,9 +15,6 @@
     <!-- chart js library -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
 
-    <!-- socks.js for web-sockets with vert x -->
-    <script src="https://unpkg.io/sockjs-client@1.5.0/dist/sockjs.min.js"></script>
-    
     <title>Dam Dashboard</title>
 </head>
 
@@ -31,7 +28,7 @@
         <div id="data-section" class="text-center col-12 col-md-5">
                             <div id="state" class="data py-3 lvl-0">
                     <p>Dam Status</p>
-                    <p class="value fw-bold fs-3"></p>
+                    <p class="value fw-bold fs-3">Connecting...</p>
                 </div>
                                             <div id="w-lvl" class="data py-3 lvl-1">
                     <p>Water Level</p>
