added responsive timer for ajax on alert basis

--- a/smart_dam/src/dam_dashboard/index.html
+++ b/smart_dam/src/dam_dashboard/index.html
@@ -28,7 +28,7 @@
         <div id="data-section" class="text-center col-12 col-md-5">
                             <div id="state" class="data py-3 lvl-0">
                     <p>Dam Status</p>
-                    <p class="value fw-bold fs-3">Connecting...</p>
+                    <p class="value fw-bold fs-3"></p>
                 </div>
                                             <div id="w-lvl" class="data py-3 lvl-1">
                     <p>Water Level</p>
